# Processing/app.py
@@ -230,6 +230,9 @@ def populate_stats():
         logger.debug(new_stats)
     logger.info('Period processing has ended')
 
+def get_health():
+    return 200
+
 def init_scheduler():
     sched = BackgroundScheduler(daemon=True)
     sched.add_job(populate_stats, 'interval', seconds=app_config['scheduler']['period_sec'])
