# Receiver/app.py
@@ -126,6 +126,9 @@ def update_events_json(string_data):
     file_handle.write(json_str)
     file_handle.close()
 
+def get_health():
+    return 200
+
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api("openapi.yaml", base_path="/receiver", strict_validation = True, validate_responses = True)
 
