# Receiver/openapi.yaml
@@ -48,6 +48,34 @@ paths:
           description: user weight data created
         "400":
           description: invalid input
+  /health:
+    get:
+      summary: check service health
+      operationId: app.get_health
+      parameters:
+        - name: health
+          in: query
+          schema:
+            type: integer
+            example: 200
+      responses:
+        '200':
+          description: Receiver service is running
+          content:
+            application/json: 
+              schema:
+                type: integer
+                items:
+                  $ref: '#/components/schemas/health'
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                type: integer
+                properties:
+                  message:
+                    type: string
 components:
   schemas:
     Calories:
@@ -98,3 +126,11 @@ components:
           type: string
           format: date-time
           example: 2016-08-29T09:12:33.001Z
+    health: 
+      type: object
+      required:
+        - health
+      properties:
+        health:
+          type: integer
+          example: 200
